Refactor: levelselector directive

--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
   },
   "scripts": {
     "test": "grunt test"
-  }
+  },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/Ahineya/jsgame.git"
+    }
 }
